--- a/wepay-client/pom.xml
+++ b/wepay-client/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cc.common.pay.wepay</groupId>
-        <artifactId>common-pay-wepay-parent</artifactId>
+        <groupId>io.lite.pay.wepay</groupId>
+        <artifactId>lite-pay-wepay-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
