--- a/wepay-client/pom.xml
+++ b/wepay-client/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.lite.pay.wepay</groupId>
+        <groupId>io.lite.project.pay.wepay</groupId>
         <artifactId>lite-pay-wepay-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
