--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <groupId>io.lite</groupId>
         <artifactId>lite-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
 
